kubernetes/manifests/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sm
    version: blue
  name: sm-blue
  namespace: testing
spec:
  revisionHistoryLimit: 2
  replicas: 10
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 50%
    type: RollingUpdate
  selector:
    matchLabels:
      app: sm
      version: blue
  template:
    metadata:
      labels:
        app: sm
        version: blue
    spec:
      containers:
      - image: daitya96/stunning-memory-golang:2.0
        name: stunning-memory-golang
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        resources:         # once here
          requests:
            cpu: 250m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 100Mi
status: {}
