kubernetes/manifests/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sm
    version: green
  name: sm-green
  namespace: testing
spec:
  replicas: 10
  selector:
    matchLabels:
      app: sm
      version: green
  strategy: {}
  template:
    metadata:
      labels:
        app: sm
        version: green
    spec:
      containers:
      - image: daitya96/stunning-memory-golang:2.0
        name: stunning-memory-golang
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        resources:         # once here
          requests:
            cpu: 250m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 100Mi
status: {}
