kubernetes/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: sm
  name: sm-svc
  namespace: testing
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: sm
  type: NodePort
status:
  loadBalancer: {}
