kubernetes/manifests/gateway.yaml
# # ingress gateway
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: ingress-gateway-configuration
# spec:
#   selector:
#     istio: ingressgateway # use Istio default gateway implementation - ingress-gateway-pod label (pre-existing)
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
